@@ -8053,23 +8053,6 @@ operator|.
 name|ARRAY
 argument_list|)
 operator|+
-name|ClassSize
-operator|.
-name|align
-argument_list|(
-operator|(
-name|rowCache
-operator|==
-literal|null
-condition|?
-literal|0
-else|:
-name|rowCache
-operator|.
-name|length
-operator|)
-argument_list|)
-operator|+
 operator|(
 literal|2
 operator|*
