@@ -13929,6 +13929,92 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testIncrementColumnValue_heapSize
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|EnvironmentEdgeManagerTestHelper
+operator|.
+name|injectEdge
+argument_list|(
+operator|new
+name|IncrementingEnvironmentEdge
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|initHRegion
+argument_list|(
+name|tableName
+argument_list|,
+name|getName
+argument_list|()
+argument_list|,
+name|fam1
+argument_list|)
+expr_stmt|;
+name|long
+name|byAmount
+init|=
+literal|1L
+decl_stmt|;
+name|long
+name|size
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|region
+operator|.
+name|incrementColumnValue
+argument_list|(
+name|row
+argument_list|,
+name|fam1
+argument_list|,
+name|qual1
+argument_list|,
+name|byAmount
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|size
+operator|=
+name|region
+operator|.
+name|memstoreSize
+operator|.
+name|get
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"memstore size: "
+operator|+
+name|size
+argument_list|,
+name|size
+operator|>=
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
 name|testIncrementColumnValue_UpdatingInPlace_Negative
 parameter_list|()
 throws|throws
