@@ -443,6 +443,22 @@ name|hbase
 operator|.
 name|util
 operator|.
+name|IncrementingEnvironmentEdge
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|util
+operator|.
 name|ManualEnvironmentEdge
 import|;
 end_import
@@ -535,6 +551,17 @@ operator|.
 name|toBytes
 argument_list|(
 literal|"row"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|row2
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"row2"
 argument_list|)
 decl_stmt|;
 name|byte
@@ -2249,6 +2276,421 @@ operator|.
 name|getValue
 argument_list|()
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testICV_negMemstoreSize
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|init
+argument_list|(
+name|this
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|long
+name|time
+init|=
+literal|100
+decl_stmt|;
+name|ManualEnvironmentEdge
+name|ee
+init|=
+operator|new
+name|ManualEnvironmentEdge
+argument_list|()
+decl_stmt|;
+name|ee
+operator|.
+name|setValue
+argument_list|(
+name|time
+argument_list|)
+expr_stmt|;
+name|EnvironmentEdgeManagerTestHelper
+operator|.
+name|injectEdge
+argument_list|(
+name|ee
+argument_list|)
+expr_stmt|;
+name|long
+name|newValue
+init|=
+literal|3L
+decl_stmt|;
+name|long
+name|size
+init|=
+literal|0
+decl_stmt|;
+name|size
+operator|+=
+name|this
+operator|.
+name|store
+operator|.
+name|add
+argument_list|(
+operator|new
+name|KeyValue
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"200909091000"
+argument_list|)
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|newValue
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|this
+operator|.
+name|store
+operator|.
+name|add
+argument_list|(
+operator|new
+name|KeyValue
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"200909091200"
+argument_list|)
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|newValue
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|this
+operator|.
+name|store
+operator|.
+name|add
+argument_list|(
+operator|new
+name|KeyValue
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"200909091300"
+argument_list|)
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|newValue
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|this
+operator|.
+name|store
+operator|.
+name|add
+argument_list|(
+operator|new
+name|KeyValue
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"200909091400"
+argument_list|)
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|newValue
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|this
+operator|.
+name|store
+operator|.
+name|add
+argument_list|(
+operator|new
+name|KeyValue
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"200909091500"
+argument_list|)
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|newValue
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10000
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|newValue
+operator|++
+expr_stmt|;
+name|long
+name|ret
+init|=
+name|this
+operator|.
+name|store
+operator|.
+name|updateColumnValue
+argument_list|(
+name|row
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|newValue
+argument_list|)
+decl_stmt|;
+name|long
+name|ret2
+init|=
+name|this
+operator|.
+name|store
+operator|.
+name|updateColumnValue
+argument_list|(
+name|row2
+argument_list|,
+name|family
+argument_list|,
+name|qf1
+argument_list|,
+name|newValue
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|ret
+operator|!=
+literal|0
+condition|)
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"ret: "
+operator|+
+name|ret
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|ret2
+operator|!=
+literal|0
+condition|)
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"ret2: "
+operator|+
+name|ret2
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"ret: "
+operator|+
+name|ret
+argument_list|,
+name|ret
+operator|>=
+literal|0
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|ret
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"ret2: "
+operator|+
+name|ret2
+argument_list|,
+name|ret2
+operator|>=
+literal|0
+argument_list|)
+expr_stmt|;
+name|size
+operator|+=
+name|ret2
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|%
+literal|1000
+operator|==
+literal|0
+condition|)
+name|ee
+operator|.
+name|setValue
+argument_list|(
+operator|++
+name|time
+argument_list|)
+expr_stmt|;
+block|}
+name|long
+name|computedSize
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|KeyValue
+name|kv
+range|:
+name|this
+operator|.
+name|store
+operator|.
+name|memstore
+operator|.
+name|kvset
+control|)
+block|{
+name|long
+name|kvsize
+init|=
+name|this
+operator|.
+name|store
+operator|.
+name|memstore
+operator|.
+name|heapSizeChange
+argument_list|(
+name|kv
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+comment|//System.out.println(kv + " size= " + kvsize + " kvsize= " + kv.heapSize());
+name|computedSize
+operator|+=
+name|kvsize
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+name|computedSize
+argument_list|,
+name|size
 argument_list|)
 expr_stmt|;
 block|}
