@@ -568,6 +568,8 @@ Release 0.21.0 - Unreleased
    HBASE-3059  TestReadWriteConsistencyControl occasionally hangs (Hairong 
    	       via Ryan)
    HBASE-2906  [rest/stargate] URI decoding in RowResource
+   HBASE-3008  Memstore.updateColumnValue passes wrong flag to heapSizeChange
+   	       (Causes memstore size to go negative)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
